--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
-<html>
+<!DOCTYPE html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+        <title>Web App - Simple Interest Calculator</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
+            <div class="calculator">
+                
+                <div class="calculatorElement"> 
+                    <label>Amount</label> <input type="number"  id="principal">
+                </div>
+                <div class="calculatorElement"> 
+                    <label> Interest Rate </label> <input type="range"  id="rate" min="1" max="20" step="0.25" value="10.25" onchange="changeRate()"> <span id="rate_val">10.25%</span> <br/>
+                </div>
+                <div class="calculatorElement"> 
+                    <label>No. of Years</label>  
+                    <select id="years">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="10">20</option>
+                    </select>
+                </div>
+                
+                <div class="calculatorElement"> 
+                    <button onclick="compute()">Compute Interest</button>
+                </div>
+                <div class="calculatorElement"> 
+                    <span class="span" id="result">
+                    </span> 
+                </div>
+            </div>
+            <footer>
+                &#169; Everyone Can Get Rich
+            </footer>
+        </div>
     </body>
 </html>
